# dfa

./: Cargo.toml  README.md
src/: arguments.rs  main.rs
src/commands/: mod.rs  sync.rs
