[package]
name = "dfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
copy_dir = "0.1.3"
dirs = "5.0.1"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
